--- a/css/css.css
+++ b/css/css.css
@@ -48,14 +48,16 @@ body{
 
 /* start header */
 header{
-    /* background-image: url(../image/landing.jpg); */
-    filter: brightness();
+    position: absolute;
+    left: 0;
+    width: 100%;
 }
 header .container{
     display: flex;
     justify-content: space-between;
     align-items: center;
     position: relative;
+    min-height: 97px;
     
 }
 header .container::after{
@@ -77,6 +79,7 @@ header .container nav{
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    
 }
 header .container nav .toggle-menu{
     font-size: 22px;
@@ -99,7 +102,21 @@ header .container nav ul{
     header .container nav ul{
         display: none;
     }
+    header .container nav .toggle-menu:hover + ul{
+        display: flex;
+        position: absolute;
+        top: 100%;
+        flex-direction: column;
+        align-items: normal;
+        width: 100%;
+        left: 0;
+        background-color: rgb(0 0 0 / 50%);
+    }
+    header .container nav .toggle-menu:hover + ul li a{
+        padding: 15px;
+    }
 }
+
 header .container nav ul .active,
 header .container nav ul a:hover {
     color: var(--main_color);
