--- a/css/css.css
+++ b/css/css.css
@@ -833,3 +833,315 @@ header .container nav .form i{
     font-size: 18px;
 }
 /* end quote section */
+/* start pricing section */
+.pricing{
+    padding-bottom:var(--section-padding) ;
+    padding-top: var(--section-padding);
+}
+
+.pricing .container .box-prices{
+    display: grid;
+    grid-template-columns: repeat(auto-fill , minmax(250px,1fr));
+    gap: 30px;    
+}
+.pricing .container .box-prices .pricing-card{
+    text-align: center;
+    background-color: #FCFCFC;
+    
+}
+.pricing .container .box-prices .pricing-card .head{
+    padding: 40px 15px;
+    border-top:1px solid var(--main_color) ;
+    border-bottom:1px solid var(--main_color) ;
+   
+}
+.pricing .container .box-prices .pricing-card .head h3{
+    font-weight: normal;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+}
+.pricing .container .box-prices .pricing-card .head span{
+    font-size: 40px;
+    font-weight: 600;
+    position: relative;
+}
+.pricing .container .box-prices .pricing-card .head span::before{
+    content: "$";
+    position: relative;
+    top: -20px;
+    font-size:25px;
+}
+.pricing .container .box-prices .pricing-card .head span::after{
+    content: "/mon";
+    position: relative;
+    font-size: 20px;
+    right: -10px;
+
+}
+
+.pricing .container .box-prices .pricing-card ul{
+    list-style: none;
+}
+.pricing .container .box-prices .pricing-card ul li{
+    padding: 20px;
+    position: relative;
+}
+.pricing .container .box-prices .pricing-card ul li:not(:last-child)::after{
+    content: "";
+    width: 50%;
+    height: 1px;
+    background-color: var(--main_color);
+    position: absolute;
+    bottom: 0px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+    
+.pricing .container .box-prices .pricing-card .foot{
+    border-top:1px solid var(--main_color) ;
+    
+}
+.pricing .container .box-prices .pricing-card .foot a{
+    padding: 20px;
+    display: block;
+    text-decoration: none;
+    border: 1px solid var(--main_color);
+    margin: 30px auto;
+    width: fit-content;
+}
+.pricing .contact-text{
+    text-align: center;
+    margin: 50px auto 20px;
+}
+.pricing .contact-text p{
+    
+    font-size: 20px;
+}
+.pricing .contact-text a{
+    text-decoration: none;
+    width: fit-content;
+    background-color: var(--main_color);
+    margin: 20px auto;
+    display: block;
+    color: white;
+    padding: 15px 30px;
+}
+
+/* end pricing  section */
+/* start  subscribe section */
+.subscribe{
+    padding-bottom: var(--section-padding);
+    padding-top:var(--section-padding) ;
+    background-image: url(../image/subscribe.jpg);
+    background-size: cover;
+    position: relative;
+    color: white;
+}
+
+.subscribe::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0 0 0 / 75%);
+}
+
+.subscribe .container {
+    position: relative;
+    display: flex;
+    align-items: center;
+
+}
+@media(max-width:991px){
+    .subscribe .container{
+        flex-direction: column;
+    }
+}
+
+
+.subscribe form{
+    display: flex;
+    position: relative;
+    width: 500px;
+    max-width: 100%;
+
+}
+.subscribe form i{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 10px;
+}
+.subscribe form input[type="email"]{
+    border: 1px solid white;
+    background:none ;
+    padding: 20px 20px 20px 60px;
+    caret-color: var(--main_color);
+    width: calc(100% - 130px);
+    border-right: none;   
+}
+.subscribe form input[type="submit"]{
+    width: 130px;
+    background-color: var(--main_color);
+    color: white;
+    padding: 10px 20px;
+    border: 1px solid white;
+    text-transform: uppercase;
+    border-right: none;
+    
+}
+.subscribe form input:focus{
+    outline: none;
+}
+.subscribe form ::placeholder{
+    color: white;
+} 
+.subscribe p {
+    line-height: 2;
+    margin-left: 50px;
+}
+@media(max-width:991px){
+    .subscribe p{
+        text-align: center;
+        margin: 30px 0 0 ;
+    }
+
+}
+/* end  subscribe section */
+/*start contact section */
+.contact{
+    padding-bottom:var(--section-padding) ;
+    padding-top:var(--section-padding) ;
+}
+.contact .content{
+    display: flex;
+    justify-content: space-between;
+    
+    
+}
+@media(max-width:767px){
+    .contact .content{
+        flex-direction: column;
+        
+    }
+}
+.contact .content form{
+    flex-basis: 70%;
+}
+.contact .content form .main-input{
+    padding: 20px;
+    display: block;
+    border: 1px solid #ccc;
+    margin-bottom: 30px;
+    width: 100%;
+    
+}
+.contact .content form .main-input:focus{
+    outline: none;
+}
+.contact .content form textarea.main-input{
+    height: 200px;
+
+}
+.contact .content form input[type="submit"]{
+    color: white;
+    background-color: var(--main_color);
+    padding: 20px;
+    border: none;
+    display: flex;
+    margin-left: auto;
+    text-transform: uppercase;
+    cursor: pointer;
+
+}
+.contact .content .info{
+    flex-basis: 25%;
+}
+
+@media(max-width:767px){
+    .contact .content .info{
+        order: -1;
+        text-align: center;
+
+        
+    }
+}
+.contact .content .info h4{
+    text-transform: uppercase;
+    margin-bottom: 30px;
+    font-weight: 500;
+    font-size: 18px;
+}
+.contact .content .info .phone{
+    display: block;
+    color: #777;
+    margin-bottom: 10px;
+
+}
+.contact .content .info h4:nth-of-type(2) {
+    margin-top: 100px;
+}
+
+@media(max-width:767px){
+    .contact .content .info h4:nth-of-type(2){
+        margin-top: 30px;
+    }
+}
+.contact .content .info address{
+    color: #777;
+    line-height: 2;
+}
+
+@media(max-width:767px){
+    .contact .content .info address{
+        margin-bottom: 30px;
+    }
+}
+/*start contact section */
+/*start footer section */
+footer{
+    padding-bottom:calc(var(--section-padding)/2) ;
+    padding-top:calc(var(--section-padding)/2) ;
+    background-image: url(../image/subscribe.jpg);
+    background-size: cover;
+    position: relative;
+    color: white;
+    text-align: center;
+}
+footer::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0 0 0 / 75%);
+}
+footer .container {
+    position: relative;
+}
+footer img{
+margin-bottom: 20px;
+
+}
+footer p:not(.copyright){
+    text-transform: uppercase;
+    padding: 20px;
+    border-bottom: 1px solid white;
+    font-size: 22px;
+    width: fit-content;
+    margin: 20px auto ;
+}
+footer .social-icon i{
+    padding: 10px 15px;
+}
+footer .copyright{
+    margin-top: 60px;
+}
+footer .copyright span{
+    font-weight: bold;
+    color: var(--main_color);
+}
+/*end  footer section */
